[tool.poetry]
name = "trefoil"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
affine = ">=1.0"
click = "*"
jinja2 = "*"
palettable = "*"
pytz = "*"
fiona = ">=1.6.0"
netcdf4 = ">=1.1.1"
numpy = "*"
pyproj = "*"
rasterio = "^1.4.3"
pillow = "==6.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
wheel = "*"
twine = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
